--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,35 @@
-# Compiled class file
-*.class
+# eclipse
+bin
+*.launch
+.settings
+.metadata
+.classpath
+.project
 
-# Log file
-*.log
+# idea
+out
+*.ipr
+*.iws
+*.iml
+.idea/*
+!.idea/scopes
 
-# BlueJ files
-*.ctxt
+# gradle
+build
+.gradle
+logs
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# other
+eclipse
+run
+runs
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Errors
 hs_err_pid*
 replay_pid*
+
+# allow gradlew
+!core/gradle/wrapper
+!core/gradlew.bat
+!gradle/wrapper
+!gradlew.bat
