--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 
 # Project Settings
+# Your modId must be only lowercase letters, numbers, and _ or - symbols only
 modId=mymod
 modDisplayName=My Mod
 group=com.github.myname.mymod
